--- a/module-2-challenge-starter-code/index.html
+++ b/module-2-challenge-starter-code/index.html
@@ -17,7 +17,8 @@
       <a href="#about">About Me</a>
       <a href="#work">Work</a>
       <a href="#contact">Contact Me</a>
-      <a href="#resume">Resume</a>
+      
+      
     </nav>
   </header>
 
@@ -40,7 +41,8 @@
       <h2>About Me</h2>
       <div>
         <p>I am a front-end developer based in the UK, currently working on multiple projects, both solo and with my peers. My background is in economics, and my skillset would suit UX/UI design for the fintech sector.</p>
-        <p>In my spare time I enjoy creating things. I write stories, music, I enjoy graphic design. </p>
+        <br>
+        <p>In my spare time I enjoy creating things. I am currently working on a collection of short stories and songs. </p>
       </div>
     </section>
 
@@ -48,15 +50,15 @@
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="flex-container">
-        <a href="#" class="flex-item bacon">
+        <a href="https://benedictcodeshere.github.io/prework-study-guide/" target="_blank" class="flex-item bacon">
           <div>
-            <h3>Bacon Report</h3>
+            <h3>Study Guide</h3>
             <span>HTML</span>
           </div>
         </a>
-        <a href="#" class="flex-item lego">
+        <a href="https://benedictcodeshere.github.io/Refactoring-HTML-for-Accessibility/" target="_blank" class="flex-item lego">
           <div>
-            <h3>Lego Report</h3>
+            <h3>SEO Page</h3>
             <span>HTML</span>
           </div>
         </a>
@@ -84,15 +86,15 @@
     </section>
 
     <!-- contact -->
-    <section class="page-section contact">
+    <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
       <div>
         <address>
-          <a href="tel:+17777777777">777.777.7777</a>
-          <a href="mailto:info@codewithcorgis.com">info@codewithcorgis.com</a>
-          <a href="#">Github</a>
+          <a href="tel:+44">Phone</a>
+          <a href="mailto:codingwithbenedict99@gmail.com">Email</a>
+          <a href="https://github.com/BenedictCodesHere" target="_blank">Github</a>
           <a href="#">Twitter</a>
-          <a href="#">Spotify</a>
+          <a href="#">LinkedIn</a>
         </address>
       </div>
     </section>
