Updated HTML and CSS files, renamed projects, added linkedin

--- a/module-2-challenge-starter-code/index.html
+++ b/module-2-challenge-starter-code/index.html
@@ -50,33 +50,33 @@
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="flex-container">
-        <a href="https://benedictcodeshere.github.io/prework-study-guide/" target="_blank" class="flex-item bacon">
+        <a href="https://benedictcodeshere.github.io/prework-study-guide/" target="_blank" class="flex-item study-guide">
           <div>
             <h3>Study Guide</h3>
             <span>HTML</span>
           </div>
         </a>
-        <a href="https://benedictcodeshere.github.io/Refactoring-HTML-for-Accessibility/" target="_blank" class="flex-item lego">
+        <a href="https://benedictcodeshere.github.io/Refactoring-HTML-for-Accessibility/" target="_blank" class="flex-item seo-page">
           <div>
             <h3>SEO Page</h3>
-            <span>HTML</span>
-          </div>
-        </a>
-        <a href="#" class="flex-item corgis">
-          <div>
-            <h3>Corgis Report</h3>
             <span>HTML + CSS</span>
           </div>
         </a>
-        <a href="#" class="flex-item buddy">
+        <a href="#" class="flex-item project-3">
           <div>
-            <h3>Buddy Report</h3>
+            <h3>Project 3 (TBC)</h3>
+            <span>HTML + CSS</span>
+          </div>
+        </a>
+        <a href="#" class="flex-item project-4">
+          <div>
+            <h3>Project 4 (TBC)</h3>
             <span>Grid Flexbox CSS</span>
           </div>
         </a>
-        <a href="#" class="flex-item puzzle">
+        <a href="#" class="flex-item project-5">
           <div>
-            <h3>Puzzle Report</h3>
+            <h3>Project 5 (TBC)</h3>
             <span>Grid Flexbox CSS</span>
           </div>
         </a>
@@ -90,11 +90,9 @@
       <h2>Contact Me</h2>
       <div>
         <address>
-          <a href="tel:+44">Phone</a>
           <a href="mailto:codingwithbenedict99@gmail.com">Email</a>
           <a href="https://github.com/BenedictCodesHere" target="_blank">Github</a>
-          <a href="#">Twitter</a>
-          <a href="#">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/benedict-mcelroy-005256230">LinkedIn</a>
         </address>
       </div>
     </section>
